Fix Cookie Widget form spacing

--- a/chaplin-mod.css
+++ b/chaplin-mod.css
@@ -1254,6 +1254,10 @@
    padding: 22px 22px 144px 22px;
    box-shadow: 0px 13px 47px -15px rgb(116, 69, 254);
  }
+
+ #eu-cookie-law form {
+    margin-bottom: -25px;
+ }
  
  #eu-cookie-law input,
  #eu-cookie-law input:focus,
